Final impl gigiblender